# kong-sylar

./: .gitignore  CMakeLists.txt  log.txt
include/: log.hpp  singleton.hpp  util.hpp
src/log/: log.cpp  log.hpp
src/utils/: thread.hpp  util.cpp  util.hpp
tests/: log.txt  test.cpp
